--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   api:
     container_name: api
-    image: rcbj/api
+    image: az-test/api
     environment:
      - HOST=0.0.0.0
      - PORT=4000
@@ -11,9 +11,10 @@ services:
       dockerfile: Dockerfile
     ports:
       - "4000:4000"
+
   client:
     container_name: client
-    image: rcbj/client
+    image: az-test/client
     environment:
 #     - BASE_URL=http://localhost:3000
 #     - API_URL=http://localhost:4000
@@ -27,3 +28,15 @@ services:
         CONFIG_FILE: ${CONFIG_FILE}
     ports:
       - "3000:3000"
+# Add an nginx proxy with self signed certificates , which proxies to the api and client
+  nginx:
+    image: nginx:1.19.6
+    ports:
+      - "80:8080"
+      - "443:8443"
+    volumes:
+      - ./proxy/nginx.conf:/etc/nginx/nginx.conf
+      - ./proxy/certs:/etc/nginx/certs
+    depends_on:
+      - api
+      - client
